環境変数の書式の修正

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_deploy:
   - mkdir deploy/Scenarios
   - rsync -av --exclude 'deploy' ./ ./deploy/Scenarios
   - cd deploy
-  - zip -q JRTrainPack-$TRAVIS_TAG.zip -r Scenarios
+  - echo '$JRTrainPack-TRAVIS_TAG.zip' >> $ATS_ARCHIVE_NAME
+  - zip -q $ATS_ARCHIVE_NAME -r Scenarios
   - cd ..
 
 deploy:
