--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: minimal
 before_install:
-  - git config --global core.autocrlf false
+  - git config core.autocrlf false
+  - git add --renormalize .
+  - git reset --hard
 before_deploy:
   - mkdir deploy
   - mkdir deploy/Scenarios
