--- a/.github/workflows/deploy-archive.yml
+++ b/.github/workflows/deploy-archive.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Archive the repository
-        run: echo "./ci/package.sh"
+        run: sh ./ci/package.sh
         shell: bash
       
