--- a/.github/workflows/deploy-archive.yml
+++ b/.github/workflows/deploy-archive.yml
@@ -13,4 +13,8 @@ jobs:
       - name: Archive the repository
         run: ./.ci/package.sh
         shell: bash
-      
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with: 
+          name: JRTrainPack
+          path: ./deploy/JRTrainPack.zip
