--- a/.github/workflows/deploy-archive.yml
+++ b/.github/workflows/deploy-archive.yml
@@ -7,6 +7,13 @@ jobs:
   deploy-arhive:
     runs-on: ubuntu-latest
     steps:
+      - name: Delete latest release
+        uses: ame-yu/action-delete-latest-release@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Check out the repository
         uses: actions/checkout@v2
         with:
